--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.application.name=webapp
-server.servlet.context-path=/hotel
+server.servlet.context-path=/hotel_owner
 debug=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 spring.main.allow-circular-references=true
-
-app.storage.root=public
-app.storage.user=user
-app.storage.category=category
