--- a/front_end/package.json
+++ b/front_end/package.json
@@ -9,23 +9,53 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.5.0",
-    "@react-router/serve": "^7.5.0",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@fullcalendar/web-component": "^6.1.17",
+    "@heroicons/react": "^2.2.0",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
+    "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.25.4",
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.3",
+    "cookie": "^0.6.0",
+    "date-fns": "^4.1.0",
+    "isbot": "^5.1.27",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.4",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
+    "sass": "^1.77.8",
+    "sweetalert2": "^11.22.0",
+    "tw-animate-css": "^1.2.8"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.0",
-    "@tailwindcss/vite": "^4.0.0",
+    "@react-router/dev": "^7.5.3",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/uuid": "^10.0.0",
     "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.3",
+    "vite-plugin-env-compatible": "^2.0.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
