--- a/front_end/package.json
+++ b/front_end/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.25.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "isbot": "^5.1.27",
