--- a/front_end/.env
+++ b/front_end/.env
@@ -1,11 +1,11 @@
-VITE_REACT_APP_BACK_END_LINK = "http://103.161.172.90:9898/hotel/owner/api"
+VITE_REACT_APP_BACK_END_LINK = "http://localhost:9898/hotel/owner/api"
 
-VITE_REACT_APP_ADMIN_BACK_END_LINK = "http://103.161.172.90:9898/hotel/api"
+VITE_REACT_APP_ADMIN_BACK_END_LINK = "http://localhost:9898/hotel/api"
 
 
-VITE_REACT_APP_BACK_END_LINK_UPLOAD_USER = "http://103.161.172.90:9898/hotel/upload/user"
+VITE_REACT_APP_BACK_END_LINK_UPLOAD_USER = "http://localhost:9898/hotel/upload/user"
 
-VITE_REACT_APP_BACK_END_UPLOAD_HOTEL = "http://103.161.172.90:9898/hotel/upload/hotel"
+VITE_REACT_APP_BACK_END_UPLOAD_HOTEL = "http://localhost:9898/hotel/upload/hotel"
 
-VITE_REACT_APP_BACK_END_UPLOAD_DOCUMENT = "http://103.161.172.90:9898/hotel/upload/document"
+VITE_REACT_APP_BACK_END_UPLOAD_DOCUMENT = "http://localhost:9898/hotel/upload/document"
 
